# calculator

./: CMakeLists.txt  list.txt  main.cpp
libs/: CMakeLists.txt
libs/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h  test_my_lib.cpp
libs/test/gtest/samples/: sample2.h
